@@ -1,3 +1,14 @@
+2010-10-28  Paolo Bonzini  <bonzini@gnu.org>
+
+	* configure.ac: Rewrite DGUX check to use GC_CFLAGS, and -O0 check
+	to remove the need for MY_CFLAGS.
+	* Makefile.am: Do not use @...@ substitutions.  Use AM_CXXFLAGS,
+	AM_CFLAGS and AM_LDFLAGS instead of redefining LTCOMPILE and LINK.
+	Use "override" to disable -O2 when required.
+	* configure: Regenerate.
+	* Makefile.in: Regenerate.
+	* include/Makefile.in: Regenerate.
+
 2010-10-11  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* dyn_load.c: Fix typo.
